syntax = "proto3";

package grpc_test;

option go_package="github.com/sanjay7178/go-basics/grpc_test/grpc_test";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
